# enginy-dnn

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main  main.cpp
include/enginydnn/: types.hpp
include/enginydnn/functions/activations/: sigmoid.hpp
tests/: test_sigmoid.cpp
